# cupoch

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  conan.Dockerfile  conanfile.py  docker-compose.yml  vcpkg-configuration.json  vcpkg.json
.github/workflows/: ubuntu.yml  windows.yml
cmake/: conan.cmake  conan_dependencies.cmake  configure_cuda.cmake  cuda_architecture_macros.cmake  cupoch_cuda_flags.cmake  set_cupoch_version.cmake  third_party.cmake
examples/cpp/: CMakeLists.txt  image.cpp  kinematics.cpp  pointcloud.cpp  registration.cpp  trianglemesh.cpp  voxelization.cpp
ports/cub/: portfile.cmake
ports/libcudacxx/: usage
ports/liblzf/: usage
ports/thrust/: usage
scripts/: encode_shader.py
src/: CMakeLists.txt
src/cupoch/: CMakeLists.txt  cupoch.h  cupoch_config.h.in
src/cupoch/camera/: CMakeLists.txt
src/cupoch/collision/: CMakeLists.txt
src/cupoch/geometry/: CMakeLists.txt
src/cupoch/imageproc/: CMakeLists.txt  sgm.cpp
src/cupoch/integration/: CMakeLists.txt
src/cupoch/io/: CMakeLists.txt
src/cupoch/io/file_format/: file_obj.cu  file_ply.cu  file_stl.cu
src/cupoch/kinematics/: CMakeLists.txt  kinematic_chain.h
src/cupoch/kinfu/: CMakeLists.txt
src/cupoch/knn/: CMakeLists.txt  kdtree_flann.inl  lbvh_knn.inl
src/cupoch/odometry/: CMakeLists.txt
src/cupoch/planning/: CMakeLists.txt
src/cupoch/registration/: CMakeLists.txt
src/cupoch/utility/: CMakeLists.txt  dl_converter.cu
src/cupoch/visualization/: CMakeLists.txt
src/cupoch/visualization/shader/: geometry_renderer.cpp  image_shader.h  normal_shader.h  phong_shader.h  simple_shader.h  simple_white_shader.h  texture_phong_shader.h  texture_simple_shader.h
src/cupoch/visualization/visualizer/: visualizer.cpp  visualizer_renderer.cpp
src/python/: CMakeLists.txt  setup.py
src/tests/: CMakeLists.txt
src/tests/test_utility/: raw.h
test_package/: CMakeLists.txt  conanfile.py  example.cpp  test_imageproc.cpp  test_io.cpp  test_kinematics.cpp  test_registration.cpp  test_visualization.cpp
