macro(EXAMPLE_CPP EXAMPLE_CPP_NAME)
    foreach(module ${ARGN})
        if(NOT BUILD_${module})
            message(STATUS "Skipping example ${EXAMPLE_CPP_NAME} because ${module} is not enabled")
        return()
        endif()
    endforeach()
    add_executable(${EXAMPLE_CPP_NAME} "${EXAMPLE_CPP_NAME}.cpp")
    target_link_libraries(${EXAMPLE_CPP_NAME} PRIVATE ${ARGN})
    set_target_properties(${EXAMPLE_CPP_NAME} PROPERTIES
            FOLDER "examples/cpp/"
            RUNTIME_OUTPUT_DIRECTORY "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/examples")
endmacro(EXAMPLE_CPP)

EXAMPLE_CPP(image cupoch_visualization cupoch_geometry cupoch_io)
EXAMPLE_CPP(pointcloud cupoch_visualization cupoch_geometry cupoch_io)
EXAMPLE_CPP(trianglemesh cupoch_visualization cupoch_geometry cupoch_io)
EXAMPLE_CPP(registration cupoch_visualization cupoch_registration cupoch_io)
EXAMPLE_CPP(voxelization cupoch_visualization cupoch_geometry cupoch_io)
EXAMPLE_CPP(kinematics cupoch_visualization cupoch_kinematics cupoch_io)