macro(EXAMPLE_CPP EXAMPLE_CPP_NAME)
    set(DEPS)
    foreach(module ${ARGN})
        if(NOT BUILD_cupoch_${module})
            message(STATUS "Skipping example ${EXAMPLE_CPP_NAME} because cupoch_${module} is not enabled")
        return()
        endif()
        list(APPEND DEPS cupoch::${module})
    endforeach()
    add_executable(${EXAMPLE_CPP_NAME} "${EXAMPLE_CPP_NAME}.cpp")
    target_link_libraries(${EXAMPLE_CPP_NAME} PRIVATE ${DEPS})
    set_target_properties(${EXAMPLE_CPP_NAME} PROPERTIES
            FOLDER "examples/cpp/"
            RUNTIME_OUTPUT_DIRECTORY "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/examples")
endmacro(EXAMPLE_CPP)

EXAMPLE_CPP(image visualization geometry io)
EXAMPLE_CPP(pointcloud visualization geometry io)
EXAMPLE_CPP(trianglemesh visualization geometry io)
EXAMPLE_CPP(registration visualization registration io)
EXAMPLE_CPP(voxelization visualization geometry io)
EXAMPLE_CPP(kinematics visualization kinematics io)